network/minikube-dev/sawtooth/sawtooth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pbft-org0peer0
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pbft-org0peer0
  template:
    metadata:
      labels:
        name: pbft-org0peer0
        app: sawtooth-org0

    spec:
      containers:
        - name: sawtooth-devmode-engine
          image: hyperledger/sawtooth-devmode-engine-rust:1.2.4
          command:
            - bash
          args:
            - -c
            - "devmode-engine-rust -C tcp://$HOSTNAME:5050"

        - name: sawtooth-settings-tp
          image: hyperledger/sawtooth-settings-tp:1.2.6
          command:
            - bash
          args:
            - -c
            - "settings-tp -vv -C tcp://$HOSTNAME:4004"

        # - name: sawtooth-intkey-tp-js
        #   image: le999/int-key:1.0
        #   # env:
        #   #   - name: VALIDATOR
        #   #     value: "tcp://localhost:4004"
        #   command:
        #     - bash
        #   args:
        #     - -c
        #     - "VALIDATOR=tcp://$HOSTNAME:4004 node ./index.js"

        # - name: sawtooth-intkey-tp-python
        #   image: hyperledger/sawtooth-intkey-tp-python:1.2.3
        #   command:
        #     - bash
        #   args:
        #     - -c
        #     - "intkey-tp-python -vv -C tcp://$HOSTNAME:4004"

        # - name: sawtooth-xo-tp-python
        #   image: hyperledger/sawtooth-xo-tp-python:1.2.3
        #   command:
        #     - bash
        #   args:
        #     - -c
        #     - "xo-tp-python -vv -C tcp://$HOSTNAME:4004"

        - name: sawtooth-validator
          image: hyperledger/sawtooth-validator:1.2.6
          ports:
            - name: tp
              containerPort: 4004
            - name: consensus
              containerPort: 5050
            - name: validators
              containerPort: 8800
          command:
            - bash
          args:
            - -c
            - "sawadm keygen \
            && sawtooth keygen my_key \
            && sawset genesis -k /root/.sawtooth/keys/my_key.priv \
            && sawset proposal create \
              -k /root/.sawtooth/keys/my_key.priv \
              sawtooth.consensus.algorithm.name=Devmode \
              sawtooth.consensus.algorithm.version=0.1 \
              -o config.batch \
            && sawadm genesis config-genesis.batch config.batch \
            && sawtooth-validator -vv \
                --endpoint tcp://$SAWTOOTH_0_SERVICE_HOST:8800 \
                --bind component:tcp://eth0:4004 \
                --bind consensus:tcp://eth0:5050 \
                --bind network:tcp://eth0:8800 \
                --scheduler serial"

        - name: sawtooth-rest-api
          image: hyperledger/sawtooth-rest-api:1.2.6
          ports:
            - name: api
              containerPort: 8008
          command:
            - bash
          args:
            - -c
            # - "sawtooth-rest-api -C tcp://$HOSTNAME:4004"
            # https://github.com/hyperledger/sawtooth-core/pull/2002
            - "sawtooth-rest-api -C tcp://$HOSTNAME:4004 -B 0.0.0.0:8008"

        - name: sawtooth-shell
          image: hyperledger/sawtooth-shell:1.2.6
          command:
            - bash
          args:
            - -c
            - "sawtooth keygen && tail -f /dev/null"

---

apiVersion: v1
kind: Service
metadata:
  name: sawtooth-org0peer0
spec:
  type: ClusterIP
  selector:
    name: pbft-org0peer0
  ports:
    - name: "4004"
      protocol: TCP
      port: 4004
      targetPort: 4004
    - name: "5050"
      protocol: TCP
      port: 5050
      targetPort: 5050
    - name: "8008"
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: "8800"
      protocol: TCP
      port: 8800
      targetPort: 8800

---

apiVersion: v1
kind: Service
metadata:
  name: sawtooth-org0peer0-lb
spec:
  selector:
    name: pbft-org0peer0
  ports:
    - name: "4004"
      port: 4004
      nodePort: 30009
    # - name: "8008"
    #   port: 8008
    #   nodePort: 30008
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: sawtooth-org0
spec:
  type: ClusterIP
  selector:
    app: sawtooth-org0
  ports:
    - name: "4004"
      protocol: TCP
      port: 4004
      targetPort: 4004
    - name: "5050"
      protocol: TCP
      port: 5050
      targetPort: 5050
    - name: "8008"
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: "8080"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "8800"
      protocol: TCP
      port: 8800
      targetPort: 8800

---

apiVersion: v1
kind: Service
metadata:
  name: sawtooth-org0-lb
spec:
  selector:
    app: sawtooth-org0
  ports:
    # - name: "4004"
    #   port: 4004
    #   nodePort: 30009
    - name: "8008"
      port: 8008
      nodePort: 30008
  type: LoadBalancer
