network/minikube-dev/sawtooth/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sw0
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: sawtooth-0.com
    http:
      paths:
      - backend:
          serviceName: sawtooth-0
          servicePort: 8008

---
